chore: importing shoelace correctly

--- a/src/scripts/pages/options.html
+++ b/src/scripts/pages/options.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Options de l'Extension</title>
+  <title>Save my Chatbot Options</title>
+  <link rel="stylesheet" href="options.css">
 </head>
 <body>
 <h1>Options de l'Extension</h1>
