feat: save options format

--- a/src/scripts/pages/options.html
+++ b/src/scripts/pages/options.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="pages.css">
 </head>
 <body>
-<h1>Options de l'Extension</h1>
+<h1>Extension Options</h1>
 <div id="options-container" class="container"></div>
 <script src="pages.js"></script>
 </body>
