feat: improving Options page styling

--- a/src/scripts/pages/options.html
+++ b/src/scripts/pages/options.html
@@ -6,8 +6,7 @@
   <link rel="stylesheet" href="pages.css">
 </head>
 <body>
-<h1>Extension Options</h1>
-<div id="options-container" class="container"></div>
+<main id="options-container" class="container"></main>
 <script src="pages.js"></script>
 </body>
 </html>
