fix: minor text changes

--- a/src/scripts/pages/options.html
+++ b/src/scripts/pages/options.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Save my Chatbot Options</title>
+  <title>Save my Chatbot - Export Options</title>
   <link rel="stylesheet" href="pages.css">
 </head>
 <body>
