Chore(build): migrate Esbuild from using the command line to using a configuration file, add TypeScript and LitElement support
BREAKING CHANGE: This change affects the project structure and may require updates to existing build scripts and configurations.

--- a/src/entrypoints/options.html
+++ b/src/entrypoints/options.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Save my Chatbot - Export Options</title>
   <link rel="stylesheet" href="pages.css">
+  <script type="module" src="pages.js"></script>
 </head>
 <body>
-<main id="options-container" class="container"></main>
-<script src="pages.js"></script>
+<export-options></export-options>
 </body>
 </html>
