style: managing height

--- a/src/entrypoints/options.html
+++ b/src/entrypoints/options.html
@@ -8,5 +8,12 @@
 </head>
 <body>
 <export-options></export-options>
+<style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+</style>
 </body>
 </html>
